--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,14 +1,4 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{goods_name}}</text>
-    <text class="user-motto">{{goods_price}}</text>
-  </view>
+<view>
+    <button type="primary" bindtap="btnLogin">登录</button>
 </view>
