--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,3 +2,17 @@
 <view>
     <button type="primary" bindtap="btnLogin">登录</button>
 </view>
+<!--轮播图-->
+   <swiper class='u-wrp-bnr' indicator-dots='true' autoplay='true' interval='5000' duration='1000' circular='true'>
+  <block wx:for="{{bnrUrl}}" wx:for-index="index">
+    <swiper-item>
+      <image src='{{item.url}}' class='u-img-slide' mode='aspectFill'></image>
+    </swiper-item>
+  </block>
+</swiper>
+<!--导航栏-->
+
+<!--list列表-->
+<view wx:for="{{list}}" wx:key="{{item}}">
+      {{index}}: {{item}}
+</view>
