--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,21 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+/**button按钮样式**/
+button{
+   margin-top:0rpx;
+   margin-bottom:0rpx;
 }
+/**轮播图样式**/
+.u-wrp-bnr {
+  width: 100%;
+  height: 200rpx;
+  display: block;
+  position: relative;
+  top: 10rpx;
+  background: #f0f0f0;
+}
+.u-img-slide {
+  width: 100%;
+  height: inherit;
+}
+/**导航栏**/
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
-}
