--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -18,4 +18,10 @@ button{
   height: inherit;
 }
 /**导航栏**/
-
+  .list-add{
+  position: fixed;
+  bottom: 50;
+  width: 500%;
+  height: 300;
+  letter-spacing:10rpx;
+}
