--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -18,10 +18,67 @@ button{
   height: inherit;
 }
 /**导航栏**/
-  .list-add{
-  position: fixed;
-  bottom: 50;
-  width: 500%;
-  height: 300;
-  letter-spacing:10rpx;
-}
+ .nav{
+    margin-top: 20px;
+    /* border: 1px solid gray; */
+ }
+ .nav span{
+    padding: 3px 3px 3px 3px;
+    margin-left: 15px;
+    font-size: 15px;
+    border: 1px solid #f0f0f0;
+ }
+ /* 列表 */
+ .list{
+    margin-top: -16px;
+ }
+  /* 商品列表图片大小 */
+ .list .item{
+     display: flex;
+     margin-top:25rpx;
+ }
+ .list .item .img{
+    margin-top: 40px;
+    width: 200rpx;
+    height:200rpx;
+ }
+ .list .item .img image{
+    width: 200rpx;
+    height:200rpx;
+ }
+ /* 文字在图片的右侧 */
+ .list .item .content{
+    width: 100%;
+    height:200rpx;
+    padding-right:1rpx;
+ }
+ .list .item .content .goods_name{
+    margin:10px 0 0 25px;
+    margin-top: 120rpx;
+    font-size:12px;
+    word-break: break-all;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+ }
+
+
+ .list .item .content .goods_brand{
+    margin:10px 0 0 25px;
+    font-size: 25rpx;
+    margin-top: 20rpx;
+    color: grey;
+ }
+
+ .list .item .content .shop_price{
+ margin:10px 0 0 25px;
+     font-size:12px;
+     margin-top: 10rpx;
+     color:red;
+ }
+ span:hover{
+      color: red;
+ }
+
