--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -8,26 +8,33 @@
   </block>
 </swiper>
 
-<!--导航栏-->
+<!--导航栏 开始-->
+<view class="nav-box">
 <view class="nav">
-  <span>全部</span>
-  <span>猫粮</span>
-  <span>狗粮</span>
-  <span>玩具</span>
-  <span>保健</span>
-  <span>零食</span>
+      <scroll-view scroll-x="true">
+          <span class="item current">全部</span>
+          <span class="item">猫粮</span>
+          <span class="item">狗粮</span>
+          <span class="item">玩具</span>
+          <span class="item">保健</span>
+          <span class="item">零食</span>
+      </scroll-view>
+ </view>
 </view>
+
+
+<!--导航栏 结束-->
 
 <!--列表 开始-->
 <view class="list">
-<view class="item" wx:for="{{goods}}" data-goodsid="{{item.goods_id}}" bindtap="goodsDetail">
+<view class="item" wx:for="{{goods}}" wx:key="unique" id="{{item.goods_id}}" bindtap="goodsDetail">
   <view class="img">
       <image src="{{item.goods_img}}" style="width: {{imagewidth}}px; height: {{imageheight}}px;" alt=""></image>
   </view>
   <view class="content">
      <view class="goods_name">{{item.goods_name}}</view>
      <view class="goods_brand">Nokic</view>
-     <view class="shop_price">{{item.shop_price}}</view>
+     <view class="shop_price">￥{{item.shop_price}}</view>
   </view>
   <!--列表 结束-->
 </view>
