--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,9 @@
 <!--index.wxml-->
+
+<view>
+   <button type="primary" bindtap="btnLogin">登录</button>
+</view>
+
 <!--轮播图-->
    <swiper class='u-wrp-bnr' indicator-dots='true' autoplay='true' interval='5000' duration='1000' circular='true'>
   <block wx:for="{{bnrUrl}}" wx:for-index="index">
