--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -31,53 +31,45 @@
 /** 详情页底部导航 开始 **/
 .bottom-nav .iconfont
 {
-    font-size:20px;
+    font-size:15px;
 }
 
 .bottom-nav .nav-icon
 {
     float:left;
-    margin-top: 80px;
-    margin-left: 10px;
-    background-color:#eeeeee;
+    margin-top: 85px;
+    margin-left: 5px; 
+    margin-right: 10px;
+    /* background-color: red; */
+    /* background-color:#eeeeee; */
     flex: 0.5;
     text-align: center;
 }
 .bottom-nav .nav-addcart {
-    float:left;
-    margin-top: 80px;
-    flex: 1;
-    line-height: 80rpx;
-    text-align: center;
-    background-color: orange;
-    color: #fff;
+    float:left;/** 左浮动 **/
+    margin-top: 82px;/** 与上边相距82px 的距离 **/
+    /* margin-right: 1px; */
+    flex: 2;
+    width:77.01px; /** 加入购物车的宽度 75px **/
+    line-height: 85rpx; /** 加入购物车中文 字的行高 **/
+    text-align: center;/** 加入购物车中 文字居中对齐 **/
+    background-color: orange;/** 加入购物车的背景颜色 **/
+    color: #fff; /** 文字颜色 白色 **/
 }
 
 .bottom-nav .nav-buynow {
     float:left;
-    margin-top: 80px;
+    margin-top: 82px;
     flex: 1;
-    line-height: 80rpx;
+    width: 77.01px;
+    height:36px;
+    line-height: 85rpx;
     text-align: center;
     background-color: #ffcc00;
     color: #fff;
 
 }
 
-.desc-box {
-    margin-top: 20rpx;
-    width: 100%;
-    padding:20rpx;
-    margin-bottom: 65rpx;
-}
-
-.desc-box .desc-img {
-    margin: 0;
-}
-
-.desc-box image {
-    width: 100%;
-}
 
 
 
@@ -89,8 +81,7 @@
 
 
 
-
-/** 商品详情页底部 **/
+/* * 商品详情页底部 *
 .content{
    margin-top: 24px;
    width:318px;
@@ -116,4 +107,4 @@
 .content .hand-buy .btn5 .item-txt5{
    float:left;
    margin-left:10px;
-}
+} */
