--- a/pages/cart/cart.wxss
+++ b/pages/cart/cart.wxss
@@ -1,2 +1,86 @@
-/* pages/cart/cart.wxss */
-
+/** 购物车头部 **/
+.page-box{
+   background-color:#eee;
+}
+.cart-top{
+   display:flex;
+   background-color:#eee;
+   padding:10rpx;
+   height:80rpx;
+   line-height:80rpx;
+}
+.cart-top .top-left{
+   flex:1;
+}
+/** 购物车信息 **/
+.item-list .item{
+   display:flex;
+   align-items:center;
+   border-bottom:1px solid #eee;
+}
+.item-list .item image{
+   width:200rpx;
+   height:200rpx;
+}
+.item-list .item .content{
+   margin-left:15px;
+}
+.item-list .item .content .price-info{
+   display:flex;
+   padding: 15rpx 0;
+}
+.item-list .item .content .price-info .goods_price{
+   color:#fc0;
+}
+.item-list .item .content .price-info .number{
+   display:flex;
+   border:1rpx solid #eee;
+   border-radius:10rpx;
+   text-align:center;
+   margin-left:120rpx;
+}
+.item-list .item .content .price-info .number .decr{
+   width:45rpx;
+   border-right:1rpx solid #eee;
+}
+.item-list .item .content .price-info .number .incr{
+   width:40rpx;
+   text-align:center;
+   border-left:1rpx solid #eee;
+}
+.item-list .item .content .price-info .number input{
+   width:80rpx;
+   text-align:center;
+}
+.bottom-box{
+   display:flex;
+   background-color:#fff;
+   width:100%;
+   height:100rpx;
+   align-items:center;
+   position:fixed;
+   bottom:0;
+   left:0;
+}
+.bottom-box .all{
+   font-size:30rpx;
+   width:200rpx;
+   padding-left:20rpx;
+}
+.bottom-box .bottom-price{
+   font-size:30rpx;
+   flex:1;
+}
+.bottom-box .bottom-price .price{
+   color:red;
+}
+.bottom-box .btn{
+   width:130rpx;
+   text-align:center;
+   border-radius:10rpx;
+   font-size:30rpx;
+   height:60rpx;
+   margin-right:20rpx;
+   background-color:orange;
+   color:#fff;
+}
