购物车 --全选反选 --计算总价

--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -1,7 +1,13 @@
 <!-- 购物车头部 开始 -->
+<view class="box" wx:if="{{goodsList==''}}">
+   <view>购物车是空的</view>
+</view>
+<view wx:else>
 <view class="page-box">
    <view class="cart-top">
-        <view class="top-left">共一件商品</view>
+        <view bindtap="goodsCount" class="top-left">共
+            <text>{{goodsCount}}</text>件商品
+        </view>
         <view class="top-right" bindtap="deleteList">删除</view>
    </view>
 </view>
@@ -13,23 +19,23 @@
     <view class="item" wx:for="{{goodsList}}" wx:key="*this">
       <!-- 复选框 -->
       <checkbox-group>
-         <checkbox value="1" checked="false"></checkbox>
+         <checkbox checked="{{item.checked}}" bindtap="{{selected}}"></checkbox>
       </checkbox-group>
       <!-- 图片 -->
       <view class="pic">
-         <image src="/images/timg.jpg"></image>
+         <image bindtap="CartDetail" src="/images/timg.jpg"></image>
       </view>
       <!-- 购物车信息 -->
       <view class="content">
         <view class="goods_name">{{item.goods_name}}</view>
-        <view class="goods_desc">商品品牌</view>
+        <!--<view class="goods_desc">商品描述</view>-->
         <view class="price-info">
            <view class="goods_price">￥{{item.shop_price}}</view>
            <view class="number">
            <!-- 减少数量 -->
              <view bindtap="minusCount" data-cartid="{{item.goods_id}}" class="decr">-</view>
            <!-- 数量 -->
-             <text>{{item.goods_num}}</text>
+             <input value="{{item.goods_num}}"></input>
            <!-- 增加数量 -->
              <view bindtap="addCount" data-cartid="{{item.goods_id}}" class="incr">+</view>
            </view>
@@ -42,9 +48,9 @@
 <!-- 购物车底部结算 开始 -->
   <view class="bottom-box">
     <view class="all">
-      <checkbox-group bindtap="selectAll">
-        <checkbox checked="{{true}}" checked="{{isselectAll}}"/>
-          <text >全选</text>
+      <checkbox-group bindchange="selectAll">
+        <checkbox checked="{{isselectAll}}"/>
+          <text>全选</text>
       </checkbox-group>
     </view>
     <view class="bottom-price">
@@ -53,4 +59,6 @@
     </view>
     <view class="btn btn-default">去结算</view>
   </view>
+</view>
+
 <!-- 购物车底部结算 开始 -->
